@@ -1,6 +1,8 @@
 devel
 -----
 
+* Improve some RocksDB-related error messages during server startup.
+
 * BTS-624: The `move-calculations-up` optimization rule is now also applied to
   subqueries, when they don't have dependencies on the outer nodes, don't have
   modification nodes and don't read their own writes. This fixed the execution
